--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <base href="./" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>氏名 | Your Name</title>
+    <title>氏名 | 川原一晃</title>
 
     <!-- SEO -->
     <meta name="description" content="氏名の研究ページです。" />
-    <meta name="keywords" content="氏名,研究,ページ,キーワード1,キーワード2" />
-    <meta name="author" content="Your Name" />
-    <link rel="canonical" href="https://username.github.io/" />
+    <meta name="keywords" content="氏名,研究,ページ,材料科学,フッ化物電池" />
+    <meta name="author" content="Kazuaki Kawahara" />
+    <link rel="canonical" href="https://kazuakikawahara.github.io/" />
 
     <!-- Google Search Console用サイトマップ宣言 -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "url": "https://username.github.io/",
+        "url": "https://kazuakikawahara.github.io/",
         "potentialAction": {
           "@type": "ReadAction",
-          "target": "https://username.github.io/"
+          "target": "https://kazuakikawahara.github.io/"
         }
       }
     </script>
