--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <base href="./" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>氏名 | 川原一晃</title>
+    <title>川原一晃 | Kazuaki Kawahara</title>
 
     <!-- SEO -->
     <meta name="description" content="氏名の研究ページです。" />
